--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,4 +12,12 @@
 	<div class="post-content">
 		{{ content }}
 	</div>
+	<script src="https://utteranc.es/client.js"
+			repo="Dormouse0224/dormouse0224.github.io"
+			issue-term="pathname"
+			label="✨💬Comment✨"
+			theme="github-dark"
+			crossorigin="anonymous"
+			async>
+		</script>
 </article>
