--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,5 +48,6 @@
 </div>
 
 <div class="sidebar-item sidebar-footer">
-	<p>Powered by <a href="https://github.com/jekyll/jekyll">Jekyll</a></p>
+	<p>E-MAIL <br> arcticpenguin@naver.com <br> arcticpenguin24@gmail.com </a></p><br>
+	<p>YOUTUBE <br> <a href=https://www.youtube.com/@dormouse24>https://www.youtube.com/@dormouse24</a></p>
 </div>
