--- a/_includes/default.html
+++ b/_includes/default.html
@@ -16,4 +16,8 @@
 		</div>
 	</div>
   </body>
+  
+  <script type="text/javascript" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </html>
