--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,23 +1,15 @@
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        TeX: {
-          equationNumbers: {
-            autoNumber: "AMS"
-          }
-        },
-        tex2jax: {
-        inlineMath: [ ['$', '$'] ],
-        displayMath: [ ['$$', '$$'] ],
-        processEscapes: true,
+<script type="text/javascript">
+  window.MathJax = {
+      tex: {
+          equationNumbers: { autoNumber: "AMS" },
+          inlineMath: [['$', '$']],
+          displayMath: [['$$', '$$']]
+      },
+      options: {
+          processHtmlClass: "mathjax-process", // 특정 클래스만 처리하고 싶다면 추가
       }
-    });
-    MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
-          alert("Math Processing Error: "+message[1]);
-        });
-    MathJax.Hub.Register.MessageHook("TeX Jax - parse error",function (message) {
-          alert("Math Processing Error: "+message[1]);
-        });
-    </script>
-    <script type="text/javascript" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-MML-AM_CHTML">
-    </script>
+  };
+</script>
+<script type="text/javascript" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
