--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,8 +214,9 @@ article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decora
 article img { max-width: 100%; }
 
 blockquote {
-	color: #828282;
-  	border-left: 4px solid #ccc;
+	color: #000000;
+  	border-left: 4px solid #000000;
+	background: #747474;
   	padding-left: 10px;
   	margin: 0;
   	margin-bottom: 15px;
