--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,7 +216,7 @@ article img { max-width: 100%; }
 blockquote {
 	color: #000000;
   	border-left: 4px solid #000000;
-	background: #747474;
+	background: #afafaf;
   	padding-left: 10px;
   	margin: 0;
   	margin-bottom: 15px;
